<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#CAE8CE"
    android:id="@+id/dl_read"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_read"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/fullscreen_content"
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="150dp"
            android:background="@color/transparent"
            />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:background="@color/grey"
            tools:ignore="UselessParent"
            >
            <Button
                android:id="@+id/btn_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_list"
                android:gravity="center"
                android:textColor="@drawable/selector_textcolor"
                android:text="@string/bookpop_catalog" />

            <Button
                android:id="@+id/btn_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_sun"
                android:gravity="center"
                android:textColor="@drawable/selector_textcolor"
                android:text="@string/bookpop_light" />

            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_download"
                android:gravity="center"
                android:textColor="@drawable/selector_textcolor"
                android:text="@string/bookpop_download" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_skip"
                android:gravity="center"
                android:textColor="@drawable/selector_textcolor"
                android:text="@string/bookpop_skip" />

            <Button
                android:id="@+id/btn_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_text"
                android:gravity="center"
                android:textColor="@drawable/selector_textcolor"
                android:text="@string/bookpop_size" />


        </LinearLayout>

    </FrameLayout>

    <!--左边抽屉菜单-->
    <RelativeLayout
        android:id="@+id/rl_left"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#CAE8CE"
        >
        <ListView
            android:id="@+id/lv_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>